fix: wrapping of tag feed

--- a/static/style.css
+++ b/static/style.css
@@ -273,6 +273,8 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
 }
 
 /* syntax highlight */
